compiler/tests/fixtures/invalid/semantics/selector_duplicate_candidate.viv
// Invalid: duplicate candidate name in selector

action wave:
    roles:
        @waver:
            as: initiator

action-selector pick:
    roles:
        @actor:
            as: initiator
    target randomly:
        wave;
        wave;
